# ai

./: README.md
.claude-plugin/: marketplace.json  plugin.json
agents/nasa-dod-agent/: .gitignore  README.md  pyproject.toml
agents/nasa-dod-agent/docs/superpowers/plans/: 2026-06-21-function-level-chunking.md
agents/nasa-dod-agent/docs/superpowers/specs/: 2026-06-21-function-level-chunking-design.md
agents/nasa-dod-agent/src/nasa_dod_agent/: checkpointer.py  chunker.py  cli.py  config.py  fix_parser.py  graph.py  llm_client.py  models.py  standards_loader.py  state.py
agents/nasa-dod-agent/src/nasa_dod_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
agents/nasa-dod-agent/src/nasa_dod_agent/nodes/: apply_fixes.py  evaluate_rubric.py  generate_fixes.py  re_review_changed.py  review_code.py
agents/nasa-dod-agent/standards/: reviewer-prompt.md  severity-guide.md
agents/nasa-dod-agent/tests/: conftest.py  test_apply_fixes.py  test_checkpointer.py  test_chunker.py  test_cli.py  test_config.py  test_evaluate_rubric.py  test_fix_parser.py  test_generate_fixes.py  test_graph_routing.py  test_llm_client.py  test_models.py  test_re_review_changed.py  test_resume.py  test_review_code.py  test_standards_loader.py
agents/nasa-dod-agent/tests/fixtures/bad_python_module/: __init__.py  missing_error_handling.py  unbounded_loop.py
assets/demo/: demo.tape  nasa-dod  sample_sensor.py  transcript.sh
llama-cpp/: commands.txt
prompt/: GENERIC-AI-SYSTEM-PROMPT.md  harsh-style.md  system-coding-prompt.md
skills/agent-team/: README.md  (+9 more)
(+60 files in other folders)
